--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -46,6 +46,10 @@
   blockquote {
     @apply border-l-4 border-neutral-700 pl-4 italic text-neutral-200;
   }
+
+  [id] {
+    scroll-margin-top: 80px;
+  }
 }
 
 @layer components {
