feat: responsive updates and light mode

--- a/src/styles/deflist.css
+++ b/src/styles/deflist.css
@@ -2,7 +2,7 @@
 
 @layer components {
   .deflist dt {
-    @apply text-xs uppercase text-neutral-300 font-medium mb-2;
+    @apply text-xs uppercase text-neutral-600 dark:text-neutral-300 font-medium mb-2;
   }
 
   .deflist dd {
