--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -2,6 +2,6 @@
 
 @layer components {
   .nav-item {
-    @apply text-neutral-100 hover:text-neutral-100/80 transition-colors text-xs font-medium leading-none;
+    @apply text-neutral-900 dark:text-neutral-100 hover:text-neutral-900/80 dark:hover:text-neutral-100/80 transition-colors lg:text-xs font-medium leading-none;
   }
 }
