--- a/src/styles/about-me-header.css
+++ b/src/styles/about-me-header.css
@@ -3,7 +3,14 @@
 @layer components {
   .about-me-header {
     @apply relative;
-    background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' xmlns='http://www.w3.org/2000/svg'%3E%3Cline x1='0' y1='30' x2='30' y2='30' stroke='%23333' stroke-width='1'/%3E%3Cline x1='30' y1='0' x2='30' y2='30' stroke='%23333' stroke-width='1'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' xmlns='http://www.w3.org/2000/svg'%3E%3Cline x1='0' y1='30' x2='30' y2='30' stroke='%23e2e2e2' stroke-width='1'/%3E%3Cline x1='30' y1='0' x2='30' y2='30' stroke='%23e2e2e2' stroke-width='1'/%3E%3C/svg%3E");
+  }
+
+
+  @media (prefers-color-scheme: dark) {
+    .about-me-header {
+      background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' xmlns='http://www.w3.org/2000/svg'%3E%3Cline x1='0' y1='30' x2='30' y2='30' stroke='%23333' stroke-width='1'/%3E%3Cline x1='30' y1='0' x2='30' y2='30' stroke='%23333' stroke-width='1'/%3E%3C/svg%3E");
+    }
   }
 
   .about-me-header img {
