--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -2,11 +2,11 @@
 
 @layer components {
   .button {
-    @apply inline-flex items-center w-fit gap-2 px-4 py-2 bg-white rounded;
-    @apply text-sm text-neutral-950 font-medium;
-    @apply border-2 border-white;
+    @apply inline-flex items-center w-fit gap-2 px-4 py-2 bg-black dark:bg-white rounded;
+    @apply text-sm text-neutral-100 dark:text-neutral-950 font-medium;
+    @apply border-2 border-black dark:border-white;
     @apply transition ease-linear;
-    @apply shadow-lg shadow-white/10 hover:shadow-white/20;
+    @apply shadow-lg shadow-black/10 hover:shadow-black/20;
   }
 
   .button-icon {
@@ -22,6 +22,6 @@
   }
 
   .button.button__secondary {
-    @apply bg-transparent text-neutral-100;
+    @apply bg-transparent text-neutral-900 dark:text-neutral-100;
   }
 }
