--- a/src/styles/hamburger.css
+++ b/src/styles/hamburger.css
@@ -2,10 +2,10 @@
 
 @layer components {
   .hamburger {
-    width: 35px;
-    height: 23px;
+    width: 2rem;
+    height: 1.76rem;
     position: absolute;
-    top: 0.845rem;
+    top: 1.1rem;
     right: 0;
     transform: rotate(0deg);
     transition: .5s ease-in-out;
@@ -16,30 +16,30 @@
   .hamburger .hamburger-line {
     display: block;
     position: absolute;
-    height: 3px;
+    height: 0.2rem;
     width: 100%;
     border-radius: 1px;
     opacity: 1;
     left: 0;
     transform: rotate(0deg);
     transition: .25s ease-in-out;
-    @apply bg-neutral-100;
+    @apply bg-neutral-900 dark:bg-neutral-100;
   }
 
   .hamburger .hamburger-line:nth-child(1) {
-    top: 0px;
+    top: 0;
   }
 
   .hamburger .hamburger-line:nth-child(2),.hamburger .hamburger-line:nth-child(3) {
-    top: 10px;
+    top: 0.55rem;
   }
 
   .hamburger .hamburger-line:nth-child(4) {
-    top: 20px;
+    top: 1.15rem;
   }
 
   .hamburger.is-open .hamburger-line:nth-child(1) {
-    top: 18px;
+    top: 0;
     width: 0%;
     left: 50%;
   }
