--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -77,7 +77,26 @@
   }
 
   .article pre {
+    overflow-x: auto;
     border-radius: 0.4rem;
+    padding: 1rem;
+  }
+
+  .article code {
+    @apply text-sm;
+  }
+
+  /* Shiki syntax highlighting */
+  @media (prefers-color-scheme: dark) {
+    .shiki,
+    .shiki span {
+      color: var(--shiki-dark) !important;
+      background-color: var(--shiki-dark-bg) !important;
+      /* Optional, if you also want font styles */
+      font-style: var(--shiki-dark-font-style) !important;
+      font-weight: var(--shiki-dark-font-weight) !important;
+      text-decoration: var(--shiki-dark-text-decoration) !important;
+    }
   }
 
   .article table td,
